# rsfx

./: Cargo.toml  README.md
.fleet/: run.json
src/: byte_buffer_reader.rs  color.rs  game_context.rs  game_status.rs  gl_renderer.rs  graphics_settings.rs  input.rs  lib.rs  math.rs  matrices.rs  mesh.rs  obj_loader.rs  renderer.rs  rsfx_context.rs  scene.rs  texture.rs  transform.rs
src/collision/: aabb.rs  mod.rs  static_world.rs
src/collision/colliders/: face.rs
src/internal/: aspect_ratio.rs  framebuffer.rs  game_context.rs  gl_renderer.rs  mod.rs  renderable.rs  renderer_command.rs  rsfx_context.rs  shader_program.rs  uniform_locations.rs  vertex_attributes.rs  vertex_data.rs  wgpu_renderer.rs  window_context.rs
src/internal/render_passes/: depth_map_pass.rs  main_pass.rs  main_render.rs  mod.rs
src/internal/shaders/: depth_map_pass_shader.frag  depth_map_pass_shader.vert  framebuffer_shader.frag  framebuffer_shader.vert  main_pass_shader.frag  main_pass_shader.vert  screen_shader.frag  screen_shader.vert
src/internal/structs/: mod.rs  vec2.rs  vec3.rs  vertex_data.rs
src/shaders/: mod.rs  screen_shader.frag  screen_shader.vert
unused_src/: game_status.rs  graphics_settings.rs  input.rs  lib.rs  math.rs  obj_loader.rs  scene.rs  texture.rs  transform.rs  transform_animation.rs  vertex_data.rs
unused_src/collision/: mod.rs  static_world.rs
unused_src/collision/colliders/: mod.rs  sphere.rs
unused_src/internal/: aspect_ratio.rs  byte_buffer_reader.rs  framebuffer.rs  shader_program.rs  time.rs
unused_src/internal/render_passes/: main_pass.rs  (+1 more)
(+2 files in other folders)
