[package]
name = "rsfx"
version = "0.1.0"
authors = ["Egidijus Lileika <lileikaa@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = "0.30.5"
wgpu = "22.1.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
png = "0.16.8"
glam = "0.27.0"
